--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                                 <div class="vacancy-content">
                                                     <span class="title">มัธยมศึกษาตอนต้น</span>
                                                     <h4 class="subject">แผนการเรียนวิทย์-คณิต</h4>
-                                                    <h6 class="institution">โรงเรียนดาราสมุทร</h6>
+                                                    <h6 class="institution">โรงเรียนบุญประทีปวิทยาคาร</h6>
                                                     <p>วิทยาศาตร์ คณิตศาสตร์พื้นฐาน สิ่งมีชีวิต สสาร แรงโน้มถ่วง การบวก ลบ คูณ หาร ทศนิยม เรขาคณิตวิเคราะห์ .</p>
                                                 </div>
                                             </div>
@@ -281,7 +281,7 @@
                                                 <span class="years">2013-2016</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับก่อนประถมศึกษา</span>
-                                                    <h4 class="subject">โรงเรียนดาราสมุทร</h4>
+                                                    <h4 class="subject">โรงเรียนสมคิดจิตวิทยาตาร</h4>
                                                     <p>ทักษะการใช้ชีวิตประจำวัน ตามสุขลักษณะ การพึ่งตนเอง การทำกิจกรรม การสื่อสารกับเพื่อน การนับเลข จำแนกสี กิจกรรมด้านรางการ การทรงตัว การหยิบวัตถุ.</p>
                                                 </div>
                                             </div>
@@ -289,7 +289,7 @@
                                                 <span class="years">2010-2013</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับประถมศึกษา</span>
-                                                    <h4 class="subject">โรงเรียนดาราสมุทร</h4>
+                                                    <h4 class="subject">โรงเรียนบุญประทีปวิทยาคาร</h4>
                                                     <p>การพูด ฟัง อ่าน เขียน พื้นฐาน ได้ถูกต้อง การบวก ลบ คูณ หาร ตัวเลข กิจกรรมเสริมสมรรถภาพร่างกาย ทักษะด้านภาษาต่างประเทศ มากกว่า 2 ภาษา.</p>
                                                 </div>
                                             </div>
@@ -470,8 +470,8 @@
                                    <h2>ช่องทางการติดต่อ สื่อสาร</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">ศรีราชา, ชลบุรี</span>
-                               <h3 class="animate-element delay6 fadeInUp">pattanadevelop@gmail.com</h3>
-                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-7247-8128</h4>
+                               <h3 class="animate-element delay6 fadeInUp">Chanokkan9988@gmail.com</h3>
+                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 080-117-8089</h4>
                                <!--<div class="social-style-two mt-25 animate-element delay11 fadeInUp">
                                     <a href="#"><img src="assets/images/contact/social-dribbble.png" alt="Social"></a>
                                     <a href="#"><img src="assets/images/contact/social-behance.png" alt="Social"></a>
