--- a/index-en.html
+++ b/index-en.html
@@ -82,8 +82,8 @@
                         <div class="container">
                             <div class="number-email-cv">
                                 <ul class="number-email">
-                                    <li>Call me:(+66) 09-7247-8128</li>
-                                    <li>pattanadevelop@gmail.com</li>
+                                    <li>Call me:(+66) 080-117-8089</li>
+                                    <li>Chanokkan9988@gmail.com</li>
                                 </ul>
                                     <li><a href="index.html">Thai</a> | <a href="index-en.html">English</a></li>
                             </div>
@@ -91,10 +91,10 @@
                                 <div class="col-lg-5">
                                     <div class="about-content pt-100 rpt-0 animate-element delay5 fadeInUp">
                                         <span class="sub-title mb-15 animate-element delay3 fadeInUp">About Me</span>
-                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hi,<br> I’m <span class="text-typed a-typed a-typed-about" data-text="Pattana Boonthung"></span></h2>
+                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hi,<br> I’m <span class="text-typed a-typed a-typed-about" data-text="Chanokkan Chuensirikul"></span></h2>
                                         <h3 class="animate-element delay7 fadeInUp">Darasamutr School</h3>
-                                        <p class="animate-element delay8 fadeInUp">Birthday<b>:</b>  10 August 1992.</p>
-                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  Ma-Toy.</p>
+                                        <p class="animate-element delay8 fadeInUp">Birthday<b>:</b>  27 march 2006.</p>
+                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  namo.</p>
                                         <p class="animate-element delay8 fadeInUp">Epigram<b>:</b>  The future depends on what we do in the present.</p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
                                             <a href="https://www.facebook.com/sirachadevelop"><i class="fab fa-facebook-f"></i></a>
@@ -257,7 +257,7 @@
                                                 <div class="vacancy-content">
                                                     <span class="title">Secondary School</span>
                                                     <h4 class="subject">Math-Science Program</h4>
-                                                    <h6 class="institution">Darasamutr School</h6>
+                                                    <h6 class="institution">BoonpateepwittayakranSchool</h6>
                                                     <p>Mathemetics Calculus, geometry, Probabilities, Physical science and biological sciences.</p>
                                                 </div>
                                             </div>
@@ -275,7 +275,7 @@
                                                 <span class="years">2013-2016</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Kingdergarten School</span>
-                                                    <h4 class="subject">Darasamutr School</h4>
+                                                    <h4 class="subject">somkid psychology School</h4>
                                                     <p>Life Skills Studies, Self Help, Learning and Speaking, Basic Communication, Number counting, Color classification, Balance, Basic Languages.</p>
                                                 </div>
                                             </div>
@@ -283,7 +283,7 @@
                                                 <span class="years">2010-2013</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Primary School</span>
-                                                    <h4 class="subject">Darasamutr School</h4>
+                                                    <h4 class="subject">Boonpateepwittayakran School</h4>
                                                     <p>Listing, Speaking, Reading, Writing, Spelling Thai and English, Learning Forign Languages, Science, Mathematics,Social behavier.</p>
                                                 </div>
                                             </div>
@@ -464,8 +464,8 @@
                                    <h2>Stay Connected</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">Si Racha, Chonburi</span>
-                               <h3 class="animate-element delay6 fadeInUp">pattanadevelop@gmail.com</h3>
-                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-7247-8128</h4>
+                               <h3 class="animate-element delay6 fadeInUp">Chanokkan9988@gmail.com</h3>
+                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 080-117-8089</h4>
                                <!--<div class="social-style-two mt-25 animate-element delay11 fadeInUp">
                                     <a href="#"><img src="assets/images/contact/social-dribbble.png" alt="Social"></a>
                                     <a href="#"><img src="assets/images/contact/social-behance.png" alt="Social"></a>
